<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login_Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin50"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/app_logo" />
            </LinearLayout>
        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin60"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin50"
                        android:gravity="center"
                        android:background="@drawable/shadow_bg"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/margin20"
                            android:layout_height="@dimen/margin20"
                            android:layout_marginLeft="@dimen/margin30"
                            android:src="@drawable/mail_blue" />

                        <com.doodleblue.personalapp.CustomView.CustomEdittext_Regular
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/margin10"
                            android:layout_marginRight="@dimen/margin7"
                            android:singleLine="true"
                            android:inputType="textWebEmailAddress"
                            android:background="@null"
                            android:hint="@string/enter_emial"
                            android:textColorHint="@color/blue"
                            android:textColor="@color/blue"/>

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin50"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/margin20"
                        android:background="@drawable/shadow_bg"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/margin20"
                            android:layout_height="@dimen/margin20"
                            android:layout_marginLeft="@dimen/margin30"
                            android:src="@drawable/pwd_blue"/>

                        <com.doodleblue.personalapp.CustomView.CustomEdittext_Regular
                            android:id="@+id/et_pwd"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/pwd"
                            android:inputType="textWebPassword"
                            android:singleLine="true"
                            android:textColorHint="@color/blue"
                            android:textColor="@color/blue"
                            android:layout_marginLeft="@dimen/margin10"
                            android:layout_marginRight="@dimen/margin7"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin50"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/margin25"
                        android:background="@drawable/shadow_bg_blue"
                        android:orientation="horizontal">



                                <com.doodleblue.personalapp.CustomView.ButtonTypeface
                                    android:id="@+id/btn_login"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@null"
                                    android:hint="@string/log_in"
                                    android:textColorHint="@color/white"
                                    android:textSize="@dimen/margin20"/>
                    </LinearLayout>


                    <com.doodleblue.personalapp.CustomView.CustomTextview_Regular
                        android:id="@+id/txt_noacc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_acc"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/margin40"
                        android:textSize="@dimen/margin17"
                        android:textColor="@color/blue"/>

                    <com.doodleblue.personalapp.CustomView.CustomTextview_Regular
                        android:id="@+id/txt_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reg_now"
                        android:background="@drawable/et_txt_bg"
                        android:gravity="center"
                        android:padding="@dimen/margin10"
                        android:layout_marginLeft="@dimen/margin5"
                        android:layout_marginRight="@dimen/margin5"
                        android:layout_marginTop="@dimen/margin8"
                        android:textSize="@dimen/margin18"
                        android:textColor="@color/blue"/>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
